--- a/css/index.css
+++ b/css/index.css
@@ -155,7 +155,8 @@ button {
   border-radius: 3rem;
   cursor: pointer;
   overflow: hidden;
-  transition: width 0.3s 0.15s, font-size 0.1s 0.15s;
+  transition: width 0.3s 0.15s,
+  font-size 0.1s 0.15s;
 }
 .login__submit:after {
   content: "";
